All_Component_DX/force-app/main/default/objects/Proforma_Invoice__c/Proforma_Invoice__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Consolidated invoice header</description>
    <label>Proforma Invoice</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proforma Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>