All_Component_DX/force-app/main/default/objects/Proforma_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of Customer Account to Invoice for Service or for Contract. This is a lookup to an existing salesforce account record.</description>
    <inlineHelpText>Name of Customer Account to Invoice for Service or for Contract. This is a lookup to an existing salesforce account record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proforma Invoices</relationshipLabel>
    <relationshipName>Invoice_Account</relationshipName>
    <type>Lookup</type>
</CustomField>