All_Component_DX/force-app/main/default/objects/Proforma_Invoice__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <description>Country part of billing address. Typically this will be the billing address on the Account.</description>
    <inlineHelpText>Country part of billing address. Typically this will be the billing address on the Account.</inlineHelpText>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>