All_Component_DX/force-app/main/default/objects/Proforma_Invoice__c/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <description>Postal Code part of billing address. Typically this will be the billing address on the Account.</description>
    <inlineHelpText>Postal Code part of billing address. Typically this will be the billing address on the Account.</inlineHelpText>
    <label>Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>