All_Component_DX/force-app/main/default/objects/Proforma_Invoice__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <description>State part of billing address. Typically this will be the billing address on the Account.</description>
    <inlineHelpText>State part of billing address. Typically this will be the billing address on the Account.</inlineHelpText>
    <label>Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>