All_Component_DX/force-app/main/default/objects/Proforma_Invoice__c/fields/Cancelation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Notes__c</fullName>
    <description>Input informational notes to keep track of reason for canceling proforma invoice.</description>
    <inlineHelpText>Input informational notes to keep track of reason for canceling proforma invoice.</inlineHelpText>
    <label>Cancelation Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>