All_Component_DX/force-app/main/default/objects/Proforma_Invoice__c/fields/Canceled_By__c.field-meta.xml
<CustomField>
    <fullName>Canceled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who canceled this proforma invoice</description>
    <inlineHelpText>User who canceled this proforma invoice</inlineHelpText>
    <label>Canceled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proforma_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>