All_Component_DX/force-app/main/default/objects/Proforma_Invoice__c/fields/Canceled_On__c.field-meta.xml
<CustomField>
    <fullName>Canceled_On__c</fullName>
    <description>Date/time this proforma invoice was canceled</description>
    <inlineHelpText>Date/time this proforma invoice was canceled</inlineHelpText>
    <label>Canceled On</label>
    <type>DateTime</type>
</CustomField>