All_Component_DX/force-app/main/default/objects/Proforma_Invoice__c/fields/Total_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice__c</fullName>
    <description>Total sum of all invoices consolidated under this document.</description>
    <inlineHelpText>Total sum of all invoices consolidated under this document.</inlineHelpText>
    <label>Total Invoice</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>