All_Component_DX/force-app/main/default/objects/Proforma_Invoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This is used to differentiate between invoices for services (Service) &amp; Service contracts (Contract).</description>
    <inlineHelpText>This is used to differentiate between invoices for services (Service) &amp; Service contracts (Contract).</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>