All_Component_DX/force-app/main/default/objects/Proforma_Invoice__c/listViews/All_Proforma_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Proforma_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Billing_City__c</columns>
    <columns>Billing_State__c</columns>
    <columns>Billing_Postal_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Invoice__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Proforma Invoices</label>
    <language>en_US</language>
</ListView>